new an example for flatMap